--- a/composer.json
+++ b/composer.json
@@ -19,6 +19,7 @@
   },
   "require-dev": {
     "symfony/event-dispatcher": "^3.2",
-    "phpunit/phpunit": "^6.0"
+    "phpunit/phpunit": "^6.0",
+    "doctrine/orm": "^2.5"
   }
 }
