--- a/composer.json
+++ b/composer.json
@@ -1,7 +1,7 @@
 {
   "name": "bentools/etl",
   "description": "Some classes to implement the ETL pattern, with the ability to hook on each event.",
-  "minimum-stability": "dev",
+  "minimum-stability": "stable",
   "license": "MIT",
   "authors": [
     {
