--- a/composer.json
+++ b/composer.json
@@ -12,14 +12,14 @@
     "php": ">=7.1",
     "psr/log": "^1.0"
   },
+  "autoload-dev": {
+    "psr-4": {
+      "BenTools\\ETL\\Tests\\": "tests/src"
+    }
+  },
   "autoload": {
     "psr-4": {
       "BenTools\\ETL\\": "src"
-    }
-  },
-  "autoload-dev": {
-    "psr-4": {
-      "BenTools\\ETL\\Tests\\": "tests"
     }
   },
   "require-dev": {
