--- a/composer.json
+++ b/composer.json
@@ -24,6 +24,7 @@
   },
   "require-dev": {
     "phpunit/phpunit": "^6.0",
+    "squizlabs/php_codesniffer": "~2.0",
     "symfony/event-dispatcher": "^3.2",
     "doctrine/orm": "^2.5",
     "guzzlehttp/promises": "^1.3"
