--- a/.travis.yml
+++ b/.travis.yml
@@ -10,5 +10,8 @@ before_script:
 
 script:
   - ./vendor/bin/phpcs --standard=psr2 src/
-  - ./vendor/bin/phpunit --coverage-text --coverage-clover=coverage.clover
+  - mkdir -p build/logs
+  - ./vendor/bin/phpunit --coverage-clover build/logs/clover.xml
 
+after_script:
+  - php vendor/bin/coveralls -v
