--- a/composer.json
+++ b/composer.json
@@ -15,7 +15,10 @@
   "autoload-dev": {
     "psr-4": {
       "BenTools\\ETL\\Tests\\": "tests/src"
-    }
+    },
+    "files": [
+      "vendor/symfony/var-dumper/Resources/functions/dump.php"
+    ]
   },
   "autoload": {
     "psr-4": {
@@ -28,7 +31,8 @@
     "symfony/event-dispatcher": "^3.2",
     "doctrine/orm": "^2.5",
     "guzzlehttp/promises": "^1.3",
-    "satooshi/php-coveralls": "^1.0"
+    "satooshi/php-coveralls": "^1.0",
+    "symfony/var-dumper": "^3.2"
   },
   "suggest": {
     "symfony/event-dispatcher": "An event dispatcher to hook into the ETL process.",
