--- a/.scrutinizer.yml
+++ b/.scrutinizer.yml
@@ -30,3 +30,9 @@ tools:
     php_cpd:
         enabled: true
         excluded_dirs: [vendor, tests]
+build:
+    nodes:
+        analysis:
+            tests:
+                override:
+                    - php-scrutinizer-run
