--- a/composer.json
+++ b/composer.json
@@ -18,7 +18,8 @@
     "doctrine/orm": "^2.5",
     "symfony/var-dumper": "^4.0",
     "php-coveralls/php-coveralls": "^2.1",
-    "psr/log": "^1.1"
+    "psr/log": "^1.1",
+    "phpstan/phpstan": "^0.11.5"
   },
   "autoload-dev": {
     "psr-4": {
