--- a/composer.json
+++ b/composer.json
@@ -22,7 +22,10 @@
   "autoload": {
     "psr-4": {
       "Bentools\\ETL\\": "src/"
-    }
+    },
+    "files": [
+      "src/functions.php"
+    ]
   },
   "autoload-dev": {
     "psr-4": {
