--- a/composer.json
+++ b/composer.json
@@ -13,6 +13,7 @@
     "doctrine/orm": "^2.16",
     "friendsofphp/php-cs-fixer": "^3.35",
     "mockery/mockery": "^1.6",
+    "monolog/monolog": "^3.5",
     "pestphp/pest": "^2.24",
     "phpstan/phpstan": "^1.10",
     "phpstan/phpstan-mockery": "^1.1",
