--- a/composer.json
+++ b/composer.json
@@ -18,6 +18,7 @@
     "pestphp/pest": "^2.24",
     "phpstan/phpstan": "^1.10",
     "phpstan/phpstan-mockery": "^1.1",
+    "react/stream": "^1.3",
     "symfony/var-dumper": "*"
   },
   "license": "MIT",
