--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -23,7 +23,12 @@ jobs:
           php-version: ${{ matrix.php }}
 
       - name: Install dependencies
-        run: composer install --prefer-dist --no-progress
+        run: |
+          if [[ "${{ matrix.php }}" == "8.5" ]]; then
+            composer install --prefer-dist --no-progress --ignore-platform-req=php
+          else
+            composer install --prefer-dist --no-progress
+          fi
 
       - name: Check types
         run: vendor/bin/phpstan analyse
