--- a/composer.json
+++ b/composer.json
@@ -6,8 +6,7 @@
     "php": ">=8.2",
     "psr/event-dispatcher": "^1.0",
     "psr/log": "^3.0",
-    "symfony/options-resolver": "@stable",
-    "thecodingmachine/safe": "^2.5"
+    "symfony/options-resolver": "@stable"
   },
   "require-dev": {
     "bentools/iterable-functions": "^2.1",
@@ -15,11 +14,12 @@
     "friendsofphp/php-cs-fixer": "^3.35",
     "mockery/mockery": "^1.6",
     "monolog/monolog": "^3.5",
-    "pestphp/pest": "^2.24",
+    "pestphp/pest": "^3.8",
     "phpstan/phpstan": "^1.10",
     "phpstan/phpstan-mockery": "^1.1",
     "react/stream": "^1.3",
-    "symfony/var-dumper": "*"
+    "symfony/var-dumper": "*",
+    "thecodingmachine/safe": "^3.3"
   },
   "license": "MIT",
   "autoload": {
